[package]
name = "github-alerts"
version = "0.1.0"
authors = ["Brody <tbunde01@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = "1.0.120"
httparse = "1.3.4"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
